--- a/1_intro_to_rdkit.ipynb
+++ b/1_intro_to_rdkit.ipynb
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f04e2734-c18a-49fa-8b30-02771e431244",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
     "from rdkit import Chem\n",
     "\n",
     "# Read the cleaned activity data file\n",
-    "df = pd.read_csv(\"activity_data.csv\")\n",
+    "df = pd.read_csv(\"data/activity_data.csv\")\n",
     "\n",
     "# Convert SMILES strings (column \"SMILES\") to RDKit Mol objects\n",
     "df[\"mol\"] = df[\"SMILES\"].apply(Chem.MolFromSmiles)\n",
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0088f641-3a8e-4592-ab45-378dddcd525c",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,6 @@
     }
    ],
    "source": [
-    "\n",
     "# Plot histogram of activity values\n",
     "plt.figure()\n",
     "plt.hist(df[\"f_avg_IC50\"], bins=30)\n",
@@ -724,60 +723,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b704aad-2951-4bcc-8930-3ac831716d01",
-   "metadata": {},
-   "source": [
-    "## Task: Identify the most potent compounds and visualise them\n",
-    "\n",
-    "Goal:  \n",
-    "Find the 5 most potent compounds in the dataset and visualise them.\n",
-    "\n",
-    "Instructions:  \n",
-    "1. Potency is defined here as lowest `f_avg_IC50` (in µM).  \n",
-    "2. Identify the top 5 most potent compounds.  \n",
-    "3. Visualise those molecules in an RDKit grid.  \n",
-    "4. Include each compound’s IC50 value in the legend under the structure (e.g. `IC50 = 0.12 µM`).\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "fd4873ad-257b-48a0-9f7f-02486e4e16c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b4d92494-3e9d-4ec6-af7a-c67cb809842b",
-   "metadata": {},
-   "source": [
-    "## Task: Most potent compounds by series\n",
-    "\n",
-    "Goal:  \n",
-    "For each chemical series (column `series`), identify the 5 most potent compounds and visualise them.\n",
-    "\n",
-    "Instructions:  \n",
-    "1. For each unique `series`, rank the molecules by `f_avg_IC50` (ascending).  \n",
-    "2. Take the top 5 per series.  \n",
-    "3. Visualise these molecules in an RDKit grid.  \n",
-    "4. Include both the series name and IC50 value in the legend for each molecule.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "355b54c8-03e1-4f71-8592-7070da0e2bf0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Your code here\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "27e24b2a-e83a-4a3c-b16f-74669b82cddf",
    "metadata": {},
    "source": [
@@ -839,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1d5c350a-e3c5-4aba-b809-2f81fe9e0afe",
    "metadata": {},
    "outputs": [
@@ -882,114 +827,7 @@
     }
    ],
    "source": [
-    "from rdkit import Chem\n",
-    "from rdkit.Chem import FilterCatalog, Draw\n",
-    "from IPython.display import display\n",
-    "\n",
-    "# 1. Build PAINS and Brenk catalogs\n",
-    "params_pains = FilterCatalog.FilterCatalogParams()\n",
-    "params_pains.AddCatalog(FilterCatalog.FilterCatalogParams.FilterCatalogs.PAINS)\n",
-    "pains_catalog = FilterCatalog.FilterCatalog(params_pains)\n",
-    "\n",
-    "params_struct = FilterCatalog.FilterCatalogParams()\n",
-    "params_struct.AddCatalog(FilterCatalog.FilterCatalogParams.FilterCatalogs.BRENK)\n",
-    "struct_catalog = FilterCatalog.FilterCatalog(params_struct)\n",
-    "\n",
-    "def get_alert_info(match_list):\n",
-    "    \"\"\"\n",
-    "    Given catalog.GetMatches(mol), return:\n",
-    "      - alert_desc: short human-readable description of the first alert\n",
-    "    Tries to work with different RDKit versions.\n",
-    "    \"\"\"\n",
-    "    if not match_list:\n",
-    "        return None\n",
-    "\n",
-    "    first = match_list[0]\n",
-    "\n",
-    "    # RDKit may give FilterMatch objects that have GetEntry() and GetDescription()\n",
-    "    if hasattr(first, \"GetEntry\"):\n",
-    "        try:\n",
-    "            desc = first.GetDescription()\n",
-    "        except AttributeError:\n",
-    "            entry = first.GetEntry()\n",
-    "            desc = entry.GetDescription() if hasattr(entry, \"GetDescription\") else \"alert\"\n",
-    "        return desc\n",
-    "\n",
-    "    # Or RDKit may give FilterCatalogEntry objects directly\n",
-    "    if hasattr(first, \"GetDescription\"):\n",
-    "        return first.GetDescription()\n",
-    "\n",
-    "    return \"alert\"\n",
-    "\n",
-    "# 2. Apply filters to each molecule in df\n",
-    "pains_hit_list = []\n",
-    "struct_hit_list = []\n",
-    "pains_desc_list = []\n",
-    "struct_desc_list = []\n",
-    "\n",
-    "for mol in df[\"mol\"]:\n",
-    "    pains_matches = pains_catalog.GetMatches(mol)\n",
-    "    struct_matches = struct_catalog.GetMatches(mol)\n",
-    "\n",
-    "    pains_desc = get_alert_info(pains_matches)\n",
-    "    struct_desc = get_alert_info(struct_matches)\n",
-    "\n",
-    "    pains_hit_list.append(len(pains_matches) > 0)\n",
-    "    struct_hit_list.append(len(struct_matches) > 0)\n",
-    "\n",
-    "    pains_desc_list.append(pains_desc)\n",
-    "    struct_desc_list.append(struct_desc)\n",
-    "\n",
-    "df[\"PAINS_hit\"] = pains_hit_list\n",
-    "df[\"struct_alert_hit\"] = struct_hit_list\n",
-    "df[\"PAINS_desc\"] = pains_desc_list\n",
-    "df[\"struct_alert_desc\"] = struct_desc_list\n",
-    "\n",
-    "# 3. Summary\n",
-    "print(\"Total molecules:\", len(df))\n",
-    "print(\"PAINS hits:\", df[\"PAINS_hit\"].sum())\n",
-    "print(\"Structural alert hits:\", df[\"struct_alert_hit\"].sum())\n",
-    "\n",
-    "# 4. Take up to 5 PAINS hits and 5 structural alert hits\n",
-    "pains_df = df[df[\"PAINS_hit\"]].head(5).copy()\n",
-    "struct_df = df[df[\"struct_alert_hit\"]].head(5).copy()\n",
-    "\n",
-    "# Legends will just be the alert description\n",
-    "pains_legends = [\n",
-    "    desc if desc is not None else \"PAINS alert\"\n",
-    "    for desc in pains_df[\"PAINS_desc\"]\n",
-    "]\n",
-    "\n",
-    "struct_legends = [\n",
-    "    desc if desc is not None else \"structural alert\"\n",
-    "    for desc in struct_df[\"struct_alert_desc\"]\n",
-    "]\n",
-    "\n",
-    "# 5. Visualise PAINS examples\n",
-    "if len(pains_df) > 0:\n",
-    "    print(\"PAINS examples:\")\n",
-    "    img_pains = Draw.MolsToGridImage(\n",
-    "        list(pains_df[\"mol\"]),\n",
-    "        molsPerRow=5,\n",
-    "        subImgSize=(250, 250),\n",
-    "        legends=pains_legends,\n",
-    "    )\n",
-    "    display(img_pains)\n",
-    "else:\n",
-    "    print(\"No PAINS hits found.\")\n",
-    "\n",
-    "# 6. Visualise structural alert examples\n",
-    "if len(struct_df) > 0:\n",
-    "    print(\"Structural alert examples:\")\n",
-    "    img_struct = Draw.MolsToGridImage(\n",
-    "        list(struct_df[\"mol\"]),\n",
-    "        molsPerRow=5,\n",
-    "        subImgSize=(250, 250),\n",
-    "        legends=struct_legends,\n",
-    "    )\n",
-    "    display(img_struct)\n",
-    "else:\n",
-    "    print(\"No structural alert hits found.\")\n"
+    "# Your code here\n"
    ]
   },
   {
@@ -1013,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "6c3fd8c5-697d-4b56-943d-b4cd7f4b3e0f",
    "metadata": {},
    "outputs": [
@@ -1029,64 +867,8 @@
     }
    ],
    "source": [
-    "from rdkit import Chem, DataStructs\n",
-    "from rdkit.Chem import rdMolDescriptors, Draw\n",
-    "from IPython.display import display\n",
-    "\n",
-    "# Define the lead compound from the paper\n",
-    "lead_smiles = 'N#CC1(CS(=O)(=O)N2Cc3ccc(Cl)cc3C(C(=O)Nc3cncc4ccccc34)C2)CC1'\n",
-    "lead_mol = Chem.MolFromSmiles(lead_smiles)\n",
-    "\n",
-    "# Morgan fingerprint for the lead\n",
-    "lead_fp = rdMolDescriptors.GetMorganFingerprintAsBitVect(\n",
-    "    lead_mol,\n",
-    "    radius=2,\n",
-    "    nBits=2048\n",
-    ")\n",
-    "\n",
-    "# Similarity function\n",
-    "def tanimoto_to_lead(mol):\n",
-    "    fp = rdMolDescriptors.GetMorganFingerprintAsBitVect(\n",
-    "        mol,\n",
-    "        radius=2,\n",
-    "        nBits=2048\n",
-    "    )\n",
-    "    return DataStructs.TanimotoSimilarity(lead_fp, fp)\n",
-    "\n",
-    "# 1. Calculate similarity for each molecule in the dataset\n",
-    "df[\"similarity_to_lead\"] = df[\"mol\"].apply(tanimoto_to_lead)\n",
-    "\n",
-    "# 2. Take the 20 most similar\n",
-    "top20 = df.sort_values(\"similarity_to_lead\", ascending=False).head(20).copy()\n",
-    "\n",
-    "# 3. Sort those 20 by potency (lowest IC50 = most potent)\n",
-    "top20 = top20.sort_values(\"f_avg_IC50\", ascending=True)\n",
-    "\n",
-    "# 4. Prepare molecules and legends\n",
-    "mols_to_draw = list(top20[\"mol\"])\n",
-    "legends = [\n",
-    "    f\"IC50 = {ic50:.2f} µM\" if ic50 is not None else \"IC50 = n/a\"\n",
-    "    for ic50 in top20[\"f_avg_IC50\"]\n",
-    "]\n",
-    "\n",
-    "# 5. Draw grid (5 per row)\n",
-    "img = Draw.MolsToGridImage(\n",
-    "    mols_to_draw,\n",
-    "    molsPerRow=5,\n",
-    "    subImgSize=(250, 250),\n",
-    "    legends=legends\n",
-    ")\n",
-    "\n",
-    "display(img)\n"
+    "# Your code here\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4b66eab5-b11a-4687-a9d4-b191d28f17f6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
