--- a/2_run_reinvent.ipynb
+++ b/2_run_reinvent.ipynb
@@ -71,10 +71,10 @@
     "\n",
     "## What we will do\n",
     "\n",
-    "1. **Run `slogp_max.toml`**  \n",
+    "1. **Run `config/slogp_max.toml`**  \n",
     "   We ask REINVENT to generate molecules with high logP. This is a simple, single-objective case so you can clearly see that the model can be pushed in a specific direction.\n",
     "\n",
-    "2. **Run `druglike.toml`**  \n",
+    "2. **Run `config/druglike.toml`**  \n",
     "   We ask REINVENT to generate molecules that look more generally drug-like. This version balances multiple properties at once (size, polarity, H-bonding, etc.) instead of just chasing one thing.\n",
     "\n",
     "3. **Inspect the results**  \n",
@@ -87,12 +87,14 @@
     "We will:\n",
     "- plot how the average score changes over RL steps,\n",
     "- and visualise example molecules from different stages of training,\n",
-    "  so you can literally see the chemistry shift toward what we asked for.\n"
+    "  so you can literally see the chemistry shift toward what we asked for.\n",
+    "\n",
+    "## 1. Open and get familiar with the structure of the `.toml` files! \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "7be8f1b7-1ab2-4c68-885e-15a5157a90aa",
    "metadata": {},
    "outputs": [
@@ -112,13 +114,13 @@
     "# make sure output dir exists\n",
     "Path(\"output\").mkdir(exist_ok=True)\n",
     "\n",
-    "CONFIG_PATH = Path(\"druglike.toml\").resolve()\n",
-    "PRIOR_PATH  = Path(\"reinvent.prior\").resolve()\n",
+    "CONFIG_PATH = Path(\"config/druglike.toml\").resolve()\n",
+    "PRIOR_PATH  = Path(\"priors/reinvent.prior\").resolve()\n",
     "LOG_PATH    = Path(\"output/run.log\").resolve()\n",
     "\n",
     "\n",
-    "assert CONFIG_PATH.exists(), \"Missing slogp_max.toml\"\n",
-    "assert PRIOR_PATH.exists(),  \"Missing reinvent.prior\"\n",
+    "assert CONFIG_PATH.exists(), \"Missing config/druglike.toml\"\n",
+    "assert PRIOR_PATH.exists(),  \"Missing priors/reinvent.prior\"\n",
     "\n",
     "cmd = f\"reinvent -l {LOG_PATH.as_posix()} {CONFIG_PATH.as_posix()}\"\n",
     "print(\"Launching:\", cmd)\n",
@@ -278,44 +280,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e02a6685-e35c-4acf-8cf6-a813fa2cfd93",
+   "cell_type": "markdown",
+   "id": "fea50822",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Try your own configurations\n",
+    "\n",
+    "Now that you've seen how REINVENT works, try creating your own TOML configuration files and running them. Here are some ideas:\n",
+    "\n",
+    "### Task 1: Modify druglike.toml\n",
+    "Try adjusting the weights or target ranges in `config/druglike.toml` to prioritize different properties.\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "480ccb22-38f8-4ff2-8150-830f19a5d8aa",
+   "id": "fd9232ae",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your code here for Task 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "054e8dbd",
+   "metadata": {},
+   "source": [
+    "### Task 2: Create a new TOML configuration\n",
+    "Create a custom TOML file that optimizes for specific properties relevant to your target (e.g., lower molecular weight, specific logP range, higher QED).\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13529160-d525-4b42-bc8f-cfd88725b484",
+   "id": "bed29585",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f33d4224-dd0f-4d62-88a8-a3d654d5eae1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f2a5754-5def-4f56-9a60-e87955186367",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Your code here for Task 2\n"
+   ]
   }
  ],
  "metadata": {
