--- a/4_cure_zika.ipynb
+++ b/4_cure_zika.ipynb
@@ -5,17 +5,17 @@
    "id": "7d3c7f8e-aeac-407f-b575-79b9440466f8",
    "metadata": {},
    "source": [
-    "## Designing improved inhibitors for the Zika virus NS2B–NS3 protease (PDB: 7I9O)\n",
+    "## Designing improved inhibitors for the Zika virus NS2B–NS3 protease (PDB: 7I9O) 🦟❌\n",
     "\n",
     "In this notebook we will act as an early-stage antiviral design team.\n",
     "Our biological target is the **Zika virus NS2B–NS3 protease**, a serine protease formed by the NS3 catalytic domain together with its NS2B cofactor. This protease is essential for ZIKV replication because it cleaves the viral polyprotein into the individual structural and non-structural proteins the virus needs to assemble and replicate, which makes it a high-value antiviral target. ([Nature][1])\n",
-    "We will use the experimentally solved crystal structure **7I9O**, which captures the ZIKV NS2B–NS3 protease bound to small-molecule inhibitors from the ASAP Discovery Consortium and defines a ligandable binding pocket in the active site. ([rcsb.org][2])\n",
+    "We will use the experimentally solved crystal structure **7I9O**, which captures the ZIKV NS2B–NS3 protease bound to a small-molecule inhibitor. ([rcsb.org][2])\n",
     "\n",
     "You are given a **core scaffold** derived from a weak hit in that pocket. The atoms in the core are “locked”: we assume they are important for binding. Certain positions on the scaffold are marked with `*`. Those `*` positions are attachment points where we are allowed to grow new **R-groups** to make the molecule bind better and look more like a viable lead.\n",
     "\n",
     "We will use **LibINVENT**, a scaffold-decorator model, to explore these R-groups. LibINVENT proposes substituents for the `*` sites and we will train/steer it with reinforcement learning. The key lever you control is the **scoring function** in `zika.toml`: you will define what “good” means (for example: reasonable molecular weight, acceptable physicochemical properties, no obvious liabilities, etc.), and LibINVENT will try to generate molecules that satisfy that profile.\n",
     "\n",
-    "Your workflow in this notebook:\n",
+    "Your workflow in this notebook following the same flow as the previous one with many spots for tweaking:\n",
     "\n",
     "1. **Define a scoring function**\n",
     "   Edit the TOML so that high score = “this looks like a plausible NS2B–NS3 protease inhibitor and a drug-like small molecule”.\n",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "16cecbe8-9209-48cc-92cd-59f1863270da",
    "metadata": {},
    "outputs": [],
@@ -43,26 +43,14 @@
     "# make sure output dir exists\n",
     "Path(\"output\").mkdir(exist_ok=True)\n",
     "\n",
-    "CONFIG_PATH = Path(\"zika.toml\").resolve()\n",
-    "LOG_PATH    = Path(\"output/zika.log\").resolve()\n",
-    "\n",
-    "# cmd = f\"reinvent -l {LOG_PATH.as_posix()} {CONFIG_PATH.as_posix()}\"\n",
-    "# print(\"Launching:\", cmd)\n",
-    "\n",
-    "# rl_proc = subprocess.Popen(\n",
-    "#     shlex.split(cmd),\n",
-    "#     stdout=subprocess.DEVNULL,\n",
-    "#     stderr=subprocess.STDOUT,\n",
-    "#     text=True\n",
-    "# )\n",
-    "\n",
-    "# print(\"REINVENT running with PID:\", rl_proc.pid)\n"
+    "CONFIG_PATH = Path(\"config/zika.toml\").resolve()\n",
+    "LOG_PATH    = Path(\"output/zika.log\").resolve()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5e80fdb-00b4-4ae3-a714-c26bebd186eb",
+   "id": "24885ef4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -70,7 +58,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "reinvent4",
    "language": "python",
    "name": "python3"
   },
@@ -84,7 +72,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
