--- a/2_run_reinvent.ipynb
+++ b/2_run_reinvent.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4febecaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import all required libraries\n",
+    "from pathlib import Path\n",
+    "import subprocess\n",
+    "import shlex\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import Draw\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "e220cf97-2e4d-4b91-979d-300d7cd05024",
@@ -87,9 +108,30 @@
     "We will:\n",
     "- plot how the average score changes over RL steps,\n",
     "- and visualise example molecules from different stages of training,\n",
-    "  so you can literally see the chemistry shift toward what we asked for.\n",
+    "  so you can literally see the chemistry shift toward what we asked for."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cdcfae3a",
+   "metadata": {},
+   "source": [
+    "## Open and get familiar with the structure of the `.toml` files! \n",
     "\n",
-    "## 1. Open and get familiar with the structure of the `.toml` files! \n"
+    "TOML files define REINVENT's configuration in sections:\n",
+    "\n",
+    "1. **Top-level settings**: `run_type`, `device`, output paths\n",
+    "2. **`[parameters]`**: Model files (prior/agent), batch size, SMILES randomization\n",
+    "3. **`[learning_strategy]`**: RL algorithm settings (learning rate, sigma)\n",
+    "4. **`[[stage]]`**: RL stage configuration (number of steps, checkpoint file)\n",
+    "5. **`[stage.scoring]`**: How to combine component scores (e.g., `geometric_mean`)\n",
+    "6. **`[[stage.scoring.component]]`**: Each property score includes:\n",
+    "   - Property type (e.g., `MolecularWeight`, `SlogP`, `QED`)\n",
+    "   - `endpoint` with name and weight\n",
+    "   - `transform` that converts raw values to 0–1 scores (sigmoid, double_sigmoid, reverse_sigmoid)\n",
+    "\n",
+    "**Key concept**: Each component calculates a raw property → transforms it to 0–1 → weights it → all combined into final `Score`.\n",
+    "\n"
    ]
   },
   {
@@ -108,36 +150,39 @@
     }
    ],
    "source": [
-    "from pathlib import Path\n",
-    "import subprocess, shlex, os\n",
+    "# Prepare paths\n",
+    "config_path = Path(\"config/druglike.toml\").resolve()\n",
+    "prior_path = Path(\"priors/reinvent.prior\").resolve()\n",
+    "log_path = Path(\"output/druglike.log\").resolve()\n",
     "\n",
-    "# make sure output dir exists\n",
+    "# Make sure output dir exists\n",
     "Path(\"output\").mkdir(exist_ok=True)\n",
     "\n",
-    "CONFIG_PATH = Path(\"config/druglike.toml\").resolve()\n",
-    "PRIOR_PATH  = Path(\"priors/reinvent.prior\").resolve()\n",
-    "LOG_PATH    = Path(\"output/run.log\").resolve()\n",
+    "# Verify required files exist\n",
+    "assert config_path.exists(), f\"Missing {config_path}\"\n",
+    "assert prior_path.exists(), f\"Missing {prior_path}\"\n",
     "\n",
+    "# Run REINVENT in background\n",
+    "cmd = f\"reinvent -l {log_path.as_posix()} {config_path.as_posix()}\"\n",
+    "print(\"Launching REINVENT:\", cmd)\n",
     "\n",
-    "assert CONFIG_PATH.exists(), \"Missing config/druglike.toml\"\n",
-    "assert PRIOR_PATH.exists(),  \"Missing priors/reinvent.prior\"\n",
-    "\n",
-    "cmd = f\"reinvent -l {LOG_PATH.as_posix()} {CONFIG_PATH.as_posix()}\"\n",
-    "print(\"Launching:\", cmd)\n",
-    "\n",
-    "rl_proc = subprocess.Popen(\n",
+    "reinvent_proc = subprocess.Popen(\n",
     "    shlex.split(cmd),\n",
     "    stdout=subprocess.DEVNULL,\n",
     "    stderr=subprocess.STDOUT,\n",
     "    text=True\n",
     ")\n",
     "\n",
-    "print(\"REINVENT running with PID:\", rl_proc.pid)\n"
+    "print(\"REINVENT running with PID:\", reinvent_proc.pid)\n",
+    "print(\"\\n💡 Check output/logs:\")\n",
+    "print(f\"   - Log file: {log_path}\")\n",
+    "print(f\"   - Results CSV: output/druglike_1.csv (created after training completes)\")\n",
+    "print(f\"   - Check progress: tail -f {log_path}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "121631e5-4501-4b54-ab9f-15b7e008856c",
    "metadata": {},
    "outputs": [
@@ -153,10 +198,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import math\n",
-    "\n",
     "SHOW_RAW = True  # True = plot \"... (raw)\" columns, False = plot transformed columns\n",
     "\n",
     "# load + keep valid molecules only once\n",
@@ -206,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2d352841-4f1c-4151-927e-e14343cff537",
    "metadata": {},
    "outputs": [
@@ -262,10 +303,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from rdkit import Chem\n",
-    "from rdkit.Chem import Draw\n",
-    "\n",
     "steps = sorted(df[\"step\"].unique())\n",
     "picked = sorted({steps[i] for i in np.linspace(0, len(steps)-1, 5).astype(int)})\n",
     "\n",
