--- a/1_intro_to_rdkit.ipynb
+++ b/1_intro_to_rdkit.ipynb
@@ -28,6 +28,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b38e2b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import all required libraries\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import Draw, rdMolDescriptors, Crippen, Lipinski\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ee141010-a519-4088-b4a7-ced842144961",
    "metadata": {},
@@ -47,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "c924b5f4-ca9f-4c7b-b268-723190b10634",
    "metadata": {},
    "outputs": [
@@ -64,8 +81,6 @@
     }
    ],
    "source": [
-    "from rdkit import Chem\n",
-    "\n",
     "# Example SMILES strings\n",
     "smiles_ethanol = \"CCO\"         # ethanol\n",
     "smiles_benzene = \"c1ccccc1\"    # benzene\n",
@@ -99,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "ab7e29f3-ccd6-453c-837a-1947f83ea28f",
    "metadata": {},
    "outputs": [
@@ -119,9 +134,6 @@
     }
    ],
    "source": [
-    "from rdkit import Chem\n",
-    "from rdkit.Chem import rdMolDescriptors, Crippen, Lipinski\n",
-    "\n",
     "# Create an RDKit Mol object from a SMILES string\n",
     "smiles = \"CCO\"  # ethanol\n",
     "mol = Chem.MolFromSmiles(smiles)\n",
@@ -276,9 +288,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
-    "from rdkit import Chem\n",
-    "\n",
     "# Read the cleaned activity data file\n",
     "df = pd.read_csv(\"data/activity_data.csv\")\n",
     "\n",
@@ -308,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "cf04826b-198a-432c-a478-3df666ced6c2",
    "metadata": {},
    "outputs": [
@@ -325,9 +334,6 @@
     }
    ],
    "source": [
-    "from rdkit.Chem import Draw\n",
-    "import math\n",
-    "\n",
     "# Take a random sample of 4 molecules\n",
     "subset = df.sample(4)\n",
     "\n",
@@ -377,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "8814abac-9d3a-469d-a24c-e884a186b8c8",
    "metadata": {},
    "outputs": [
@@ -489,8 +495,6 @@
     }
    ],
    "source": [
-    "from rdkit.Chem import rdMolDescriptors, Crippen, Lipinski\n",
-    "\n",
     "# Example: add molecular weight as a new column\n",
     "df[\"MW\"] = df[\"mol\"].apply(rdMolDescriptors.CalcExactMolWt)\n",
     "\n",
@@ -527,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "31ee4cab-60ba-4b29-93cb-ddee0232b5c8",
    "metadata": {},
    "outputs": [
@@ -543,8 +547,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# Example: histogram of molecular weight\n",
     "plt.figure()\n",
     "plt.hist(df[\"MW\"], bins=30)\n",
@@ -663,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0ca3474d-b60e-4058-94cb-24cfe15d5596",
    "metadata": {},
    "outputs": [
@@ -686,9 +688,6 @@
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "# 1. Filter to reasonably active compounds\n",
     "df_sub = df[df[\"f_avg_IC50\"] <= 98].copy()\n",
     "\n",
