--- a/4_cure_zika.ipynb
+++ b/4_cure_zika.ipynb
@@ -1,6 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1a0197ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'py3Dmol'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Import all required libraries\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mpy3Dmol\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msubprocess\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'py3Dmol'"
+     ]
+    }
+   ],
+   "source": [
+    "# Import all required libraries\n",
+    "import py3Dmol\n",
+    "import os\n",
+    "import subprocess\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import yaml\n",
+    "import gc\n",
+    "\n",
+    "from pathlib import Path\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import Draw, Descriptors, Lipinski, FilterCatalog, rdMolDescriptors\n",
+    "from rdkit import RDLogger\n",
+    "\n",
+    "# Disable RDKit warnings\n",
+    "RDLogger.DisableLog('rdApp.*')\n",
+    "\n",
+    "# Set thread limits for compatibility\n",
+    "os.environ[\"OMP_NUM_THREADS\"] = \"1\"\n",
+    "os.environ[\"MKL_NUM_THREADS\"] = \"1\"\n",
+    "os.environ[\"OPENBLAS_NUM_THREADS\"] = \"1\"\n",
+    "\n",
+    "# Import MDAnalysis and prolif after setting thread limits\n",
+    "import MDAnalysis as mda\n",
+    "import prolif"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7d3c7f8e-aeac-407f-b575-79b9440466f8",
    "metadata": {},
@@ -37,9 +83,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "import subprocess, shlex, os\n",
-    "\n",
     "# make sure output dir exists\n",
     "Path(\"output\").mkdir(exist_ok=True)\n",
     "\n",
