Improving organization of text 📝

--- a/2_run_reinvent.ipynb
+++ b/2_run_reinvent.ipynb
@@ -1,33 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "4febecaa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Import all required libraries\n",
-    "from pathlib import Path\n",
-    "import subprocess\n",
-    "import shlex\n",
-    "import os\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import math\n",
-    "import numpy as np\n",
-    "\n",
-    "from rdkit import Chem\n",
-    "from rdkit.Chem import Draw\n"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "id": "e220cf97-2e4d-4b91-979d-300d7cd05024",
    "metadata": {},
    "source": [
-    "# REINVENT\n",
+    "# Part 2: Introduction to REINVENT\n",
     "\n",
     "REINVENT is a generative model for molecules. Specifically, it is a SMILES-based generative model: it learns to write SMILES strings that correspond to valid, drug-like molecules. REINVENT starts from a model called the **prior**. The prior has been trained on lots of known, drug-like chemistry, so it already knows how to generate reasonable molecules (not just random junk). For optimization, we make a copy of the prior called the **agent**. The prior stays frozen as a reference for what “normal chemistry” looks like. The agent is the one we train. The whole point of REINVENT is to update the agent so it no longer just samples generic prior-like molecules, but instead starts generating molecules that match our design goals.\n",
     "\n",
@@ -74,13 +53,13 @@
     "\n",
     "## Scoring functions\n",
     "\n",
-    "The scoring function is how we tell REINVENT what “good” means. We define it in a TOML file (for example `slogp_max.toml` or `druglike.toml`) as a set of scoring components. Typical components include:\n",
+    "The scoring function is how we tell REINVENT what “good” means. We define it in a TOML file (for example in `config/slogp_max.toml` or `config/druglike.toml`) as a set of scoring components. Typical components include:\n",
     "- logP (lipophilicity)\n",
     "- molecular weight\n",
     "- H-bond donors / H-bond acceptors\n",
     "- TPSA (polarity / permeability)\n",
     "- QED (drug-likeness)\n",
-    "- synthetic accessibility (is it insane to make?)\n",
+    "- synthetic accessibility\n",
     "\n",
     "For each component, REINVENT does two things:\n",
     "1. It calculates the raw property of the molecule (for example “TPSA = 74 Å²” or “HBD = 1”).\n",
@@ -92,23 +71,55 @@
     "\n",
     "## What we will do\n",
     "\n",
-    "1. **Run `config/slogp_max.toml`**  \n",
+    "1. **Understand the structure of the `.toml` files**\n",
+    "\n",
+    "2. **Run `config/slogp_max.toml`**  \n",
     "   We ask REINVENT to generate molecules with high logP. This is a simple, single-objective case so you can clearly see that the model can be pushed in a specific direction.\n",
     "\n",
-    "2. **Run `config/druglike.toml`**  \n",
-    "   We ask REINVENT to generate molecules that look more generally drug-like. This version balances multiple properties at once (size, polarity, H-bonding, etc.) instead of just chasing one thing.\n",
-    "\n",
-    "3. **Inspect the results**  \n",
-    "   REINVENT writes a CSV (e.g. `output/run_1.csv` or `output/druglike_1.csv`) that includes:\n",
+    "3. **Visualise the slogp_max results**  \n",
+    "   REINVENT writes a CSV (`output/run_1.csv`) that includes:\n",
     "   - the generated SMILES,\n",
     "   - each property score (both raw values and transformed 0–1 values),\n",
     "   - the final `Score`,\n",
     "   - and which RL step it came from.\n",
+    "   \n",
+    "   We will:\n",
+    "   - plot how the average score changes over RL steps,\n",
+    "   - and visualise example molecules from different stages of training,\n",
+    "     so you can literally see the chemistry shift toward higher logP.\n",
     "\n",
-    "We will:\n",
-    "- plot how the average score changes over RL steps,\n",
-    "- and visualise example molecules from different stages of training,\n",
-    "  so you can literally see the chemistry shift toward what we asked for."
+    "4. **Run `config/druglike.toml`**  \n",
+    "   We ask REINVENT to generate molecules that look more generally drug-like. This version balances multiple properties at once (size, polarity, H-bonding, etc.) instead of just chasing one thing.\n",
+    "\n",
+    "5. **Visualise the druglike results**  \n",
+    "   Similar to step 3, we will:\n",
+    "   - plot how the average scores change over RL steps for the druglike run,\n",
+    "   - and visualise example molecules from different stages of training,\n",
+    "     so you can see how the chemistry balances multiple objectives.\n",
+    "\n",
+    "6. **Try your own configurations**  \n",
+    "   Create and experiment with custom TOML configuration files to optimize for different property combinations."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4febecaa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import all required libraries\n",
+    "from pathlib import Path\n",
+    "import subprocess\n",
+    "import shlex\n",
+    "import os\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "from rdkit import Chem\n",
+    "from rdkit.Chem import Draw"
    ]
   },
   {
@@ -116,22 +127,175 @@
    "id": "cdcfae3a",
    "metadata": {},
    "source": [
-    "## Open and get familiar with the structure of the `.toml` files! \n",
-    "\n",
-    "TOML files define REINVENT's configuration in sections:\n",
-    "\n",
-    "1. **Top-level settings**: `run_type`, `device`, output paths\n",
-    "2. **`[parameters]`**: Model files (prior/agent), batch size, SMILES randomization\n",
-    "3. **`[learning_strategy]`**: RL algorithm settings (learning rate, sigma)\n",
-    "4. **`[[stage]]`**: RL stage configuration (number of steps, checkpoint file)\n",
-    "5. **`[stage.scoring]`**: How to combine component scores (e.g., `geometric_mean`)\n",
-    "6. **`[[stage.scoring.component]]`**: Each property score includes:\n",
-    "   - Property type (e.g., `MolecularWeight`, `SlogP`, `QED`)\n",
-    "   - `endpoint` with name and weight\n",
-    "   - `transform` that converts raw values to 0–1 scores (sigmoid, double_sigmoid, reverse_sigmoid)\n",
-    "\n",
-    "**Key concept**: Each component calculates a raw property → transforms it to 0–1 → weights it → all combined into final `Score`.\n",
+    "## 1. Open and get familiar with the structure of the `.toml` files!\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2793f53b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For reading TOML files\n",
+    "try:\n",
+    "    import tomllib  # Python 3.11+\n",
+    "except ImportError:\n",
+    "    import tomli as tomllib  # For older Python versions\n",
+    "\n",
+    "# Load the simpler slogp_max.toml as an example\n",
+    "with open(\"config/slogp_max.toml\", \"rb\") as f:\n",
+    "    slogp_config = tomllib.load(f)\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "print(\"slogp_max.toml structure:\")\n",
+    "print(\"=\" * 60)\n",
+    "print()\n",
+    "\n",
+    "# 1. Top-level settings\n",
+    "print(\"1. TOP-LEVEL SETTINGS:\")\n",
+    "print(f\"   run_type: {slogp_config['run_type']}\")\n",
+    "print(f\"   device: {slogp_config['device']}\")\n",
+    "print(f\"   tb_logdir: {slogp_config['tb_logdir']}\")\n",
+    "print()\n",
+    "\n",
+    "# 2. Parameters\n",
+    "print(\"2. PARAMETERS [parameters]:\")\n",
+    "params = slogp_config['parameters']\n",
+    "print(f\"   agent_file: {params['agent_file']}\")\n",
+    "print(f\"   prior_file: {params['prior_file']}\")\n",
+    "print(f\"   batch_size: {params['batch_size']}\")\n",
+    "print(f\"   randomize_smiles: {params['randomize_smiles']}\")\n",
+    "print()\n",
+    "\n",
+    "# 3. Learning strategy\n",
+    "print(\"3. LEARNING STRATEGY [learning_strategy]:\")\n",
+    "learning = slogp_config['learning_strategy']\n",
+    "print(f\"   type: {learning['type']}\")\n",
+    "print(f\"   sigma: {learning['sigma']}\")\n",
+    "print(f\"   rate (learning rate): {learning['rate']}\")\n",
+    "print()\n",
+    "\n",
+    "# 4. Stage configuration\n",
+    "print(\"4. STAGE CONFIGURATION [[stage]]:\")\n",
+    "stage = slogp_config['stage'][0]  # First stage\n",
+    "print(f\"   max_steps: {stage['max_steps']}\")\n",
+    "print(f\"   termination: {stage['termination']}\")\n",
+    "print(f\"   chkpt_file: {stage['chkpt_file']}\")\n",
+    "print()\n",
+    "\n",
+    "# 5. Scoring function\n",
+    "print(\"5. SCORING FUNCTION [stage.scoring]:\")\n",
+    "scoring = stage['scoring']\n",
+    "print(f\"   type: {scoring['type']} (how component scores are combined)\")\n",
+    "print()\n",
+    "\n",
+    "# 6. Scoring components\n",
+    "print(\"6. SCORING COMPONENTS [[stage.scoring.component]]:\")\n",
+    "components = scoring['component']\n",
+    "for i, comp in enumerate(components, 1):\n",
+    "    # Each component has a property type (e.g., SlogP, MolecularWeight)\n",
+    "    prop_type = list(comp.keys())[0]  # Get the property name\n",
+    "    prop_config = comp[prop_type]\n",
+    "    endpoint = prop_config['endpoint'][0]\n",
+    "    \n",
+    "    print(f\"   Component {i}: {prop_type}\")\n",
+    "    print(f\"      - name: {endpoint['name']}\")\n",
+    "    print(f\"      - weight: {endpoint['weight']}\")\n",
+    "    \n",
+    "    transform = endpoint['transform']\n",
+    "    print(f\"      - transform: {transform['type']}\")\n",
+    "    if transform['type'] == 'sigmoid':\n",
+    "        print(f\"        (low={transform['low']}, high={transform['high']}, k={transform['k']})\")\n",
+    "        print(f\"        → Rewards HIGHER values in the range\")\n",
+    "    elif transform['type'] == 'reverse_sigmoid':\n",
+    "        print(f\"        (low={transform['low']}, high={transform['high']}, k={transform['k']})\")\n",
+    "        print(f\"        → Rewards LOWER values in the range\")\n",
+    "    elif transform['type'] == 'double_sigmoid':\n",
+    "        print(f\"        (low={transform['low']}, high={transform['high']})\")\n",
+    "        print(f\"        → Rewards values INSIDE the range [low, high]\")\n",
+    "    print()\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "print(\"KEY CONCEPT:\")\n",
+    "print(\"=\" * 60)\n",
+    "print(\"Each component: raw property → transform to [0,1] → weight → combine → final Score\")\n",
+    "print(\"The final Score is used as the reward signal for reinforcement learning.\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "641fc22d",
+   "metadata": {},
+   "source": [
+    "Now let's look at the more complex `druglike.toml` configuration, which uses multiple scoring components:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "56547a8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# For reading TOML files\n",
+    "try:\n",
+    "    import tomllib  # Python 3.11+\n",
+    "except ImportError:\n",
+    "    import tomli as tomllib  # For older Python versions\n",
+    "\n",
+    "# Load the druglike.toml configuration\n",
+    "with open(\"config/druglike.toml\", \"rb\") as f:\n",
+    "    druglike_config = tomllib.load(f)\n",
+    "\n",
+    "print(\"=\" * 60)\n",
+    "print(\"druglike.toml - Multi-objective scoring function\")\n",
+    "print(\"=\" * 60)\n",
+    "print()\n",
+    "\n",
+    "stage = druglike_config['stage'][0]\n",
+    "scoring = stage['scoring']\n",
+    "components = scoring['component']\n",
+    "\n",
+    "print(f\"Scoring type: {scoring['type']}\")\n",
+    "print(f\"  → {scoring['type']} means: if ANY component is ~0, the whole score drops.\")\n",
+    "print(f\"  → This rewards BALANCED drug-like profiles, not extreme single properties.\")\n",
+    "print()\n",
+    "print(f\"Number of scoring components: {len(components)}\")\n",
+    "print()\n",
+    "\n",
+    "print(\"Components:\")\n",
+    "for i, comp in enumerate(components, 1):\n",
+    "    prop_type = list(comp.keys())[0]\n",
+    "    prop_config = comp[prop_type]\n",
+    "    endpoint = prop_config['endpoint'][0]\n",
+    "    transform = endpoint['transform']\n",
+    "    \n",
+    "    print(f\"{i}. {endpoint['name']} (weight={endpoint['weight']})\")\n",
+    "    print(f\"   Property: {prop_type}\")\n",
+    "    print(f\"   Transform: {transform['type']}\")\n",
+    "    \n",
+    "    if transform['type'] == 'double_sigmoid':\n",
+    "        print(f\"   → Rewards values in range [{transform['low']}, {transform['high']}]\")\n",
+    "    elif transform['type'] == 'sigmoid':\n",
+    "        print(f\"   → Rewards values ≥ {transform['low']} (up to {transform['high']})\")\n",
+    "    elif transform['type'] == 'reverse_sigmoid':\n",
+    "        print(f\"   → Rewards values ≤ {transform['high']} (penalizes above {transform['high']})\")\n",
+    "    print()\n",
+    "\n",
+    "# Check for diversity filter\n",
+    "if 'diversity_filter' in druglike_config:\n",
+    "    df = druglike_config['diversity_filter']\n",
+    "    print(\"=\" * 60)\n",
+    "    print(\"DIVERSITY FILTER:\")\n",
+    "    print(\"=\" * 60)\n",
+    "    print(f\"Type: {df['type']}\")\n",
+    "    print(f\"Purpose: Prevents the model from spamming one chemotype\")\n",
+    "    print(f\"  - Groups molecules by Murcko scaffold\")\n",
+    "    print(f\"  - Limits high-scoring molecules per scaffold to {df['bucket_size']}\")\n",
+    "    print(f\"  - Applies penalty multiplier {df['penalty_multiplier']} for overused scaffolds\")\n",
+    "    print()\n"
    ]
   },
   {
@@ -139,7 +303,7 @@
    "id": "82c211ee-fea0-4c71-ae71-f6286ff06b89",
    "metadata": {},
    "source": [
-    "## Generate with high logP"
+    "## 2. Run `config/slogp_max.toml`"
    ]
   },
   {
@@ -192,6 +356,14 @@
     "print(f\"   - Log file: {log_path}\")\n",
     "print(f\"   - Results CSV: output/run_1.csv (created after training completes)\")\n",
     "print(f\"   - Check progress: tail -f {log_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bff21fd9",
+   "metadata": {},
+   "source": [
+    "## 3. Visualise the slogp_max results\n"
    ]
   },
   {
@@ -337,9 +509,9 @@
    "source": [
     "We can push Reinvent4 to generate molecules with higher predicted logP, but be aware of predictable failure modes. The model will often produce long, “stringy” hydrophobic molecules (e.g., extended alkyl chains or extra aromatic rings) because increasing non-polar surface area and removing polar/ionizable groups is an easy way to raise predicted logP. Those molecules can be valid chemically but are frequently useless for real applications. The RL agent has effectively exploited a single numeric reward. \n",
     "\n",
-    "To avoid this, combine the logP objective with constraints or complementary metrics (synthetic accessibility, molecular weight, QED, polar surface area, substructure filters) and consider using multiple logP predictors or experimentally validated data to reduce reward-hacking.\n",
+    "To avoid this, you could combine the logP objective with constraints or complementary metrics (synthetic accessibility, molecular weight, QED, polar surface area, substructure filters) and consider using multiple logP predictors or experimentally validated data to reduce reward-hacking. You'll explore this later on.\n",
     "\n",
-    "## Now, generate more druglike compounds"
+    "## 4. Run `config/druglike.toml`"
    ]
   },
   {
@@ -391,6 +563,14 @@
     "print(f\"   - Log file: {log_path}\")\n",
     "print(f\"   - Results CSV: output/druglike_1.csv (created after training completes)\")\n",
     "print(f\"   - Check progress: tail -f {log_path}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8a36719",
+   "metadata": {},
+   "source": [
+    "## 5. Visualise the druglike results\n"
    ]
   },
   {
@@ -593,7 +773,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "reinvent4",
    "language": "python",
    "name": "python3"
   },
